fixed overflow problem

--- a/style/style2.css
+++ b/style/style2.css
@@ -18,7 +18,6 @@ header {
     height: 2em;
     position: fixed;
     left: 0;
-    z-index: 100;
     text-align: center;
 }
 #navigation > div > div {
@@ -75,7 +74,6 @@ header {
     top: -2px;
     left: 13em;
     border-left-width: 1px;
-    
 }
 label.roadmapPlaces {
     width: 1.5em;
@@ -85,7 +83,12 @@ label.roadmapPlaces {
 #roadmapSubmit {
     margin-left: 6.5em;
 }
-
+#roadmapForm {
+    min-height: 60px;
+    max-height: 500px;
+    width: 250px;
+    overflow: auto;
+}
 #topic {
     font-weight: bold;
     font-style: oblique;
